correct index page spacing

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -71,7 +71,7 @@
 
 @media (min-width: 768px) {
   #title-container {
-    margin-top: 175px;
+    margin-top: 15vh;
   }
 
   #title-text {
